--- a/package.json
+++ b/package.json
@@ -15,9 +15,19 @@
     "@astrojs/sitemap": "^3.0.3",
     "@astrojs/tailwind": "^5.0.2",
     "@fontsource-variable/inter": "^5.0.15",
+    "@iconify-json/bi": "^1.1.23",
+    "@iconify-json/bx": "^1.1.10",
+    "@iconify-json/carbon": "^1.1.31",
+    "@iconify-json/fa-solid": "^1.1.8",
+    "@iconify-json/fluent": "^1.1.52",
+    "@iconify-json/heroicons-solid": "^1.1.11",
+    "@iconify-json/mdi": "^1.1.66",
+    "@iconify-json/simple-icons": "^1.1.99",
+    "@iconify-json/tabler": "^1.1.110",
+    "@iconify-json/uil": "^1.1.8",
     "@tailwindcss/typography": "^0.5.10",
     "astro": "^3.5.5",
-    "astro-icon": "^0.8.1",
+    "astro-icon": "^1.1.0",
     "astro-navbar": "^2.3.0",
     "astro-seo": "^0.8.0",
     "sharp": "^0.33.0",
